<resources>
    <string name="app_name">Filmax</string>
    <string name="now_playing">Now Playing</string>
    <string name="stext_onboard1">Lebih mudah untuk mengetahui\nfilm yang sedang tayang</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="stext_onboard2">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="btn_next">Lanjutkan</string>
    <string name="cashless">Cashless</string>
    <string name="stext_onboard3">Gunakan E-wallet untuk\nmelakukan transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="deskripsi_film">The Avengers must stop Thanos, a mad Titan, and his army from getting their hands on all the infinity stones. However, the mad Titan is prepared to go to any lengths to carry out his insane plan.</string>
    <string name="pemain">Who\'s Played</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pilih_bangku">Pilih Bangku</string>
</resources>