<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    tools:context=".sign.signup.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_white_24"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="28dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"

            />

        <TextView
            android:id="@+id/txt_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <TextView
        android:id="@+id/stext_signup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/nama"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        tools:text="Masukkan Nama"
        android:inputType="text"
        android:textColor="@color/colorSubtext"
        android:background="@drawable/shape_editext_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/stext_signup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/username"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        tools:text="Masukkan Username"
        android:inputType="text"
        android:textColor="@color/colorSubtext"
        android:background="@drawable/shape_editext_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/stext_signup3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="E-mail"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        tools:text="Masukkan Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSubtext"
        android:background="@drawable/shape_editext_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/stext_signin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        tools:text="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/shape_editext_white"
        android:textColor="@color/colorSubtext"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_blue"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        />

</LinearLayout>