<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    tools:context=".sign.sigin.SignInActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stext_signin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/username"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto"
        android:text="Username"
        android:textColor="@color/colorBackground"
        android:background="@drawable/shape_editext_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/stext_signin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/password"
        android:textColor="@color/colorBackground"
        android:background="@drawable/shape_editext_white"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_blue"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belum memilik akun?"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="32dp"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="32dp"
            android:textSize="14sp"
            android:text="Sign Up"
            android:contextClickable="true"/>
    </LinearLayout>

</LinearLayout>